# TrackBot

./: Makefile  README.md  docker-compose.yml  mkdocs.yml
.github/workflows/: deploy-docs.yml
arduino/trackbot_motor_control/: trackbot_motor_control.ino
config/: nav2_params.yaml  trackbot.rviz
docker/oak-camera/: Dockerfile
docker/ros2-core/: Dockerfile  entrypoint.sh
docker/voice-pipeline/: Dockerfile
docker/voice-pipeline/launch/: voice_pipeline.launch.py
docker/web-dashboard/: dashboard.py
docs/: architecture.md  control-loops.md  getting-started.md  hardware-wiring.md  index.md  navigation.md  power.md  serial-protocol.md  voice-pipeline.md
ros2_ws/src/trackbot_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/trackbot_bringup/launch/: trackbot.launch.py
ros2_ws/src/trackbot_control/: CMakeLists.txt  package.xml
ros2_ws/src/trackbot_control/launch/: motor_control.launch.py
ros2_ws/src/trackbot_control/scripts/: serial_bridge.py
ros2_ws/src/trackbot_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/trackbot_msgs/msg/: MotorState.msg
ros2_ws/src/trackbot_vision/: CMakeLists.txt  package.xml
ros2_ws/src/trackbot_voice/: CMakeLists.txt  package.xml  setup.py
ros2_ws/src/trackbot_voice/scripts/: voice_node.py
