<?xml version="1.0"?>
<package format="3">
  <name>trackbot_bringup</name>
  <version>0.1.0</version>
  <description>TrackBot launch files and configuration</description>
  <maintainer email="user@trackbot.local">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>trackbot_control</exec_depend>
  <exec_depend>trackbot_vision</exec_depend>
  <exec_depend>trackbot_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
