<?xml version="1.0"?>
<package format="3">
  <name>trackbot_control</name>
  <version>0.1.0</version>
  <description>TrackBot motor control via serial bridge to ATmega32U4</description>
  <maintainer email="user@trackbot.local">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>trackbot_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
