<?xml version="1.0"?>
<package format="3">
  <name>trackbot_msgs</name>
  <version>0.1.0</version>
  <description>TrackBot custom message definitions</description>
  <maintainer email="user@trackbot.local">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
