<?xml version="1.0"?>
<package format="3">
  <name>trackbot_vision</name>
  <version>0.1.0</version>
  <description>TrackBot OAK-D-Lite vision processing</description>
  <maintainer email="user@trackbot.local">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>cv_bridge</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
